[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmsg"
version = "1.0.1"
description = "Edit any git commit message"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Crush"}
]
dependencies = []

[project.scripts]
cmsg = "cmsg:main"

[tool.setuptools]
py-modules = ["cmsg"]
